<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <EditText
        android:id="@+id/et_line"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:minLines="3"
        android:hint="@string/enter_message"
        android:scrollbars="vertical"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_phone"
        android:hint="@string/enter_mobile_number_for_call"
        android:layout_margin="5dp"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="2">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dial_and_call"
            android:id="@+id/button_call"
            android:layout_weight="1"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_share"
            android:text="@string/share_it"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>